deploy/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: leangeder/website:last
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8000
        volumeMounts:
        - name: src
          mountPath: /go/src/leangeder/website/
      volumes:
      - name: src
        hostPath:
          path: /
          type: Directory
