deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: website
  labels:
    app: website
spec:
  ports:
  - name: http
    port: 8000
  selector:
    app: website
